# xpystac

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
tests/: conftest.py  test_core.py  test_xarray_plugin.py  utils.py
tests/cassettes/: test_to_xarray_with_drop_variables_raises.yaml  test_to_xarray_with_pystac_client_search.yaml  test_to_xarray_with_pystac_client_search_with_patch_url.yaml  test_to_xarray_zarr.yaml  test_to_xarray_zarr_with_open_kwargs_engine.yaml  test_xarray_open_dataset_can_guess_for_pystac_client_searchs.yaml
tests/cassettes/fixtures/: simple_reference_file.yaml  simple_search.yaml  simple_signed_search.yaml  simple_zarr.yaml
tests/cassettes/test_core/: test_to_xarray_with_drop_variables_raises.yaml  test_to_xarray_with_pystac_client_search.yaml  test_to_xarray_with_pystac_client_search_with_patch_url.yaml  test_to_xarray_zarr.yaml  test_to_xarray_zarr_with_open_kwargs_engine.yaml
tests/cassettes/test_xarray_plugin/: test_xarray_open_dataset_can_guess_for_pystac_client_searchs.yaml
tests/data/: data-cube-kerchunk-item-collection.json  virtual-icechunk-collection.json
tests/data-files/: simple-item.json
xpystac/: __init__.py  _icechunk.py  _xstac_kerchunk.py  core.py  utils.py  xarray_plugin.py
