[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "xpystac"
authors = [
    {name = "Julia Signell", email = "jsignell@element84.com"}
]
classifiers = [ "License :: OSI Approved :: MIT License",]
dependencies = [
    "xarray",
    "pystac>=1.0.1",
]
requires-python = ">=3.10"
description = "Extend xarray.open_dataset to accept pystac objects"
license = {text = "MIT"}
readme = "README.md"
dynamic = ["version"]

[project.urls]
Home = "https://github.com/stac-utils/xpystac"
Repository = "https://github.com/stac-utils/xpystac"

[dependency-groups]
dev = [
    "adlfs>=2024.12.0",
    "aiohttp>=3.11.13",
    "fsspec>=2025.3.0",
    "odc-stac>=0.3.11",
    "planetary-computer>=1.0.0",
    "pre-commit>=4.0.1",
    "pystac<1.12",
    "pystac-client>=0.8.6",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "requests>=2.32.3",
    "rioxarray>=0.18.2",
    "stackstac>=0.5.1",
    "urllib3>=2.3.0",
    "zarr<3",
]

[project.entry-points."xarray.backends"]
stac = "xpystac.xarray_plugin:STACBackend"

[tool.setuptools.packages.find]
include = [
    "xpystac",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "TID252" ]
target-version = "py310"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
